# IngestIQ

./: .gitignore  README.md  custom_types.py  data_loader.py  main.py  pyproject.toml  streamlit_app.py  vector_db.py
frontend/: index.html  package.json  pnpm-lock.yaml
frontend/src/: App.tsx  globals.css
frontend/src/components/ui/: animated-ai-chat.tsx
